transform schema mock
