# api/swagger/swagger.yaml
@@ -285,6 +285,39 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /schema/{id}/transform:
+    x-swagger-router-controller: schema
+    post:
+      security:
+        - Bearer: []
+      description: Transforms one Schema
+      tags:
+        - Schema
+      operationId: schemaTransform
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ''
+          type: string
+        - name: transformTask
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/TransformTask"
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/TransformTask"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /schema/{srcId}/diff/{trgId}:
     x-swagger-router-controller: schema
     get:
@@ -390,6 +423,10 @@ paths:
   /swagger:
     x-swagger-pipe: swagger_raw
 definitions:
+  TransformTask:
+    properties:
+      name:
+        type: string
   Collection:
     properties:
       id:
